--- a/src/style/index.css
+++ b/src/style/index.css
@@ -53,12 +53,15 @@
   border-top: 1px solid #f0f0f0;
   overflow-wrap: break-word;
   box-sizing: border-box;
-  padding: 16px 16px;
+  /* padding: 16px 16px; */
+  padding-left: 5px;
+  display: flex;
+  align-items: center;
 }
 
-.ant-pro-table .virtial-grid-item {
+/* .ant-pro-table .virtial-grid-item {
   padding: 12px 8px;
-}
+} */
 
 .dark .virtial-grid-item {
   border-top: 1px solid #303030;
